Dark Mode inside Tabs Fixed

--- a/css/get-involved_change.css
+++ b/css/get-involved_change.css
@@ -129,8 +129,7 @@
 .tab-content {
   max-height: 0;
   padding: 0 1em;
-  color: #2c3e50;
-  
+
   transition: all 0.35s;
 }
 .tab-close {
